--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "GPL-2.0-or-later"
     ],
     "require": {
-        "typo3/cms-core": "^9 || ^10",
+        "typo3/cms-core": "^9 || ^10 || ^11",
         "voku/html-min": "^4"
     },
     "autoload": {
